reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__events__envelope.rs_line_1038_col_5.log

*** crates/tracewake-core/src/events/envelope.rs:1038:5: replace deserialize_ordering_key -> Result<OrderingKey, EventEnvelopeParseError> with Ok(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/events/envelope.rs
+++ replace deserialize_ordering_key -> Result<OrderingKey, EventEnvelopeParseError> with Ok(Default::default())
@@ -1030,37 +1030,17 @@
     ]
     .into_iter()
     .map(|part| encode(&part))
     .collect::<Vec<_>>()
     .join("|")
 }
 
 fn deserialize_ordering_key(value: &str) -> Result<OrderingKey, EventEnvelopeParseError> {
-    let parts = value
-        .split('|')
-        .map(decode)
-        .collect::<Result<Vec<_>, _>>()?;
-    if parts.len() != 7 {
-        return Err(EventEnvelopeParseError::InvalidTuple);
-    }
-
-    Ok(OrderingKey::new(
-        SimTick::new(parts[0].parse()?),
-        schedule_phase_from_id(&parts[1]).ok_or(EventEnvelopeParseError::UnknownSchedulePhase)?,
-        deserialize_source_id(&parts[2])?,
-        ProposalSequence::new(parts[3].parse()?),
-        ActionId::new(parts[4].clone())?,
-        if parts[5].is_empty() {
-            Vec::new()
-        } else {
-            parts[5].split(',').map(ToString::to_string).collect()
-        },
-        parts[6].clone(),
-    ))
+    Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn schedule_phase_id(phase: &SchedulePhase) -> &'static str {
     match phase {
         SchedulePhase::HumanCommand => "human_command",
         SchedulePhase::NoHumanProcess => "no_human_process",
         SchedulePhase::DeferredProcess => "deferred_process",
         SchedulePhase::Replay => "replay",


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/events/envelope.rs` has changed (1781910937.291924301s, 2s after last build at 1781910935.139924308s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused import: `ProposalSequence`
 --> crates/tracewake-core/src/events/envelope.rs:6:37
  |
6 | use crate::scheduler::{OrderingKey, ProposalSequence, SchedulePhase, SchedulerSourceId};
  |                                     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `OrderingKey: Default` is not satisfied
    --> crates/tracewake-core/src/events/envelope.rs:1038:8
     |
1038 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `OrderingKey`
    --> crates/tracewake-core/src/scheduler.rs:56:1
     |
  56 | pub struct OrderingKey {
     | ^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 1 warning
error: could not compile `tracewake-core` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `scheduler::OrderingKey: Default` is not satisfied
    --> crates/tracewake-core/src/events/envelope.rs:1038:8
     |
1038 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `scheduler::OrderingKey`
    --> crates/tracewake-core/src/scheduler.rs:56:1
     |
  56 | pub struct OrderingKey {
     | ^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
